--- a/package.json
+++ b/package.json
@@ -20,7 +20,9 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "@types/d3": "^7.1.0",
     "@types/papaparse": "^5.3.2",
+    "d3": "^7.3.0",
     "mapbox-gl": "^2.7.1",
     "ngx-mapbox-gl": "^7.1.2",
     "papaparse": "^5.3.2",
